--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shopify - a simple eCommerce site</title>
-    <meta property="og:title" content="Shopify - a simple eCommerce site" />
-    <meta property="og:image" content="/main-og.png" />
-    <meta property="og:url" content="https://shopify-xrh7.onrender.com/" />
+    <title>Shop Kart - a simple eCommerce site</title>
+    <meta property="og:title" content="Shop Kart - Landing Page" />
+
   </head>
   <body>
     <div id="root"></div>
